# nnet

./: Cargo.toml
src/: grad.rs  lib.rs  phi.rs
