[package]
name = "nnet"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = { version = "0.34", features = ["rand", "serde-serialize"] }
rand = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
#serde = ["dep:serde"]
