[package]
name = "nnet"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
debug = 1

[dependencies]
nalgebra = { version = "0.34", features = [
    "rand",
    "serde-serialize",
    "sparse",
] }
rand = { version = "0.9", features = ["serde"] }
rand_distr = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.14"

[features]
#serde = ["dep:serde"]
